# Django

./: pyproject.toml  회원가입_로그인 관련 코드(views).py
Myweb/: .env
Myweb/config/: settings.py  urls.py
Myweb/photo/: models.py  urls.py  views.py
Myweb/photo/migrations/: 0001_initial.py
Myweb/templates/photo/: photo_detail.html  photo_list.html
blog/: .env  from.py  models.py
blog/blog/: admin.py  cb_views.py  form.py  forms.py  models.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py  0002_blog_author.py  0003_alter_blog_category.py  0004_alter_blog_category_comment.py  0005_alter_comment_options.py  0006_alter_comment_options.py  0007_blog_image.py
blog/config/: settings.py  urls.py
blog/member/: _views copy.py  views.py
blog/templates/: about.html  base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html  form_js.html  pagination.html  test_get.html  test_post.html
blog/templates/registration/: login.html  signup.html
blog/utils/: model.py
bookmark/bookmark/: .env
bookmark/bookmark/app/: settings.py
bookmark/config/: urls.py
guestbook/: main.py  pyproject.toml
guguden/config/: settings.py  urls.py
guguden/templates/: book_detali.html  book_list.html  gugu.html
