[project]
name = "guestbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "django>=5.2.9",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "ipython>=8.37.0",
    "isort>=7.0.0",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "qrcode>=8.2",
    "requests>=2.32.5",
]
